docker/headlamp-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: headlamp
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: contour
  tls:
    - secretName: headlamp
      hosts:
        - headlamp.example.com
  rules:
    - host: headlamp.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: headlamp
                port:
                  number: 80
